--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "sequelize": "^5.13.1"
   },
   "devDependencies": {
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "sequelize-cli": "^5.5.0"
   }
 }
